
		CHANGES in `multcomp' VERSION 1.1-6

    o   quantiles for confidence intervals
        used `tail = upper.tail' for `alternative = less'
        and `tail = lower.tail' for `alternative = greater'.
        This has been changed.

    o   prepare for multcomp book:
        - SAS code in inst/MCMT
        - new demos


		CHANGES in `multcomp' VERSION 1.1-5

    o   fix small problems in `cld' spotted by 
        Peter B. Mandeville <mandevip@hotmail.com>


		CHANGES in `multcomp' VERSION 1.1-4

    o   more example data sets


		CHANGES in `multcomp' VERSION 1.1-3

    o   bugfix for models without intercept and more than one factor

    o   print calls when available only

    o   support for coxme objects

    o   allow xlab and ylab arguments for plot.cld

    o   systolic blood pressure data set added


		CHANGES in `multcomp' VERSION 1.1-2

    o   mcp may average over interactions and covariates (Experimental!)

    o   ylim argument to plot

    o   update to survival 2.35-7


		CHANGES in `multcomp' VERSION 1.1-1

    o    better handling of model.frames in `cld'


		CHANGES in `multcomp' VERSION 1.1-0

    o    new compact letter displays

    o    force binary mode when downloading SPSS data files


		CHANGES in `multcomp' VERSION 1.0-8

    o    new vignette containing supplementary material
         for a letter on Pollet \& Nettle (2009, 
         Evolution and Human Behavior)

    o    references updated


		CHANGES in `multcomp' VERSION 1.0-7

    o    new default for missing linfct: inference over
         all parameters as given by coef(model)

    o    new function cftest, similar to lmtest:::coeftest


		CHANGES in `multcomp' VERSION 1.0-6

    o    better names for p-values (feature request by Achim Zeileis)


		CHANGES in `multcomp' VERSION 1.0-5

    o    update vignette


		CHANGES in `multcomp' VERSION 1.0-4

    o    fix Rd problems


		CHANGES in `multcomp' VERSION 1.0-3

    o    use isSymmetric(vcov, tol = sqrt(.Machine$double.eps)